--- a/files/qw/templates/qw/server.cfg
+++ b/files/qw/templates/qw/server.cfg
@@ -13,7 +13,7 @@ maxclients {{.Env.QW_MAX_CLIENTS}}
 floodprot 4 8 30
 floodprotmsg "You have activated the flood protection and will be silenced for 30 seconds"
 maxspectators {{.Env.QW_MAX_SPECTATORS}}
-allow_dowload 1
+allow_download 1
 allow_download_skins 1
 allow_download_models 1
 allow_download_sounds 1
