Don't encrypt rcon by default

--- a/files/qw/templates/qw/server.cfg
+++ b/files/qw/templates/qw/server.cfg
@@ -13,11 +13,12 @@ maxclients {{.Env.QW_MAX_CLIENTS}}
 floodprot 4 8 30
 floodprotmsg "You have activated the flood protection and will be silenced for 30 seconds"
 maxspectators {{.Env.QW_MAX_SPECTATORS}}
-allow_download 1
+allow_dowload 1
 allow_download_skins 1
 allow_download_models 1
 allow_download_sounds 1
 allow_download_maps 1
 password "{{.Env.QW_PASSWORD}}"
+sv_crypt_rcon 0
 
 map {{.Env.QW_MAP}}
